  [spliter]

- No longer show the ``Send this`` action by default. This refs
  http://dev.plone.org/plone/ticket/8800.
  [hannosch]

- Adjust login overlay position and width. Closes
  http://dev.plone.org/plone/ticket/9869.
  [dukebody]

- Adjust wording for user group membership removal. This fixes
  http://dev.plone.org/plone/ticket/9961.
  [dukebody]

4.0a3 - 2009-12-21
------------------

- Updated statusmessages code to more modern API.
  [hannosch]

- Updated add-on configuration section. Clarified terminology to refer to
  de/activation and interpret product readme files as restructered text.
  [hannosch]

- Adjusted control panel and upgrade screens to show software instead of
  profile version and removed dependency on the persistent product registry.
  [hannosch]

- Changed the default profile metadata version to 4003, to follow our own best
  practices of distinguishing between profile and software versions.
  [hannosch]

- Added ``Plone site`` back to the all_meta_types list and revert change that
  made the site object not copyable. These prevented Plone sites from being
  imported from zexp files.
  [hannosch]

- Do not display the author contact form when the author has no email
  (for example for openid users).  Refs #8707.
  [maurits]

- Only specify icon_expr in factory type info; not also content_icon which
  has been deprecated in CMF 2.2.
  [davisagli]

- Optimize RSS template and make it work for items without a getText method.
  This closes http://dev.plone.org/plone/ticket/9696.
  [hannosch]

- Define encoding for RSS feeds. This closes
  http://dev.plone.org/plone/ticket/3506.
  [hannosch]

- On author.cpt, only display the "log in to add comments" button if mailhost
  is defined. Only show the mailhost warning if user is authenticated.
  [esteele]

- Adjusted rss_template to work for content items without an effective date
  and include issued and modified tags. Thanks for the patch anthonygerrard.